--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -5,6 +5,7 @@
 .control-btn {
     position: relative;
     top: -1px;
+    margin-top: 5px;
     padding: 2px 4px;
     color: #ffffff;
     background-color: #0000dd;
